--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -26,9 +26,9 @@ File: Layout CSS
 /* Top Bar
 --------------------------------------------------------------------------------------------------------------- */
 #topbar{padding:5px 0 8px; font-size:16px; text-transform:uppercase;}
-
+#topbar a:hover{color:black}
 #topbar .nospace.linklist{}
-#topbar .nospace.linklist li{display:inline; margin-right:5px; padding-right:8px; border-right:1px solid;}
+#topbar .nospace.linklist li{display:inline; margin-right:5px; padding-right:8px;}
 #topbar .nospace.linklist li:last-child{margin:0; padding:0; border:none;}
 
 #top > .wrapper.row0 {position:fixed;}
