--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -18,6 +18,8 @@
 <img src="/static/images/assistant.png">
 {% elif message.title|img == "teacher" %}
 <img src="/static/images/teacher.png">
+{% elif message.title|img == "certificate" %}
+<img src="/static/images/certificate.png">
 {% endif %}
 </a>
 
