--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,5 +3,7 @@
 {% block content %}
       <img src="/static/images/banner.png"><Br><br>
 		<img src="/static/images/program.png">
+		<BR>使用者登入次數：{{admin_profile.visitor_count}}次</BR>		
 		<BR>註冊使用者：{{user_count}}人</BR>
+		<BR>開站時間：{{admin_profile.open_time}}</BR>
 {% endblock %}
