--- a/templates/account/visitorlog_list.html
+++ b/templates/account/visitorlog_list.html
@@ -4,13 +4,17 @@
 {% block content %}
         <table>
             <tr>
+                <td>編號</td>
                 <td>登入時間</td>
                 <td>訪客姓名</td>                
+                <td>訪客來源</td>
             </tr>
         {% for visitorlog in visitorlogs %}
             <tr>
+            <td>{{forloop.counter}}</td>
             <td>{{visitorlog.time}}</a></td>
             <td>{% if visitorlog.user_id|is_classmate:request %}<a href="/account/profile/{{visitorlog.user_id}}">{% endif %}{{visitorlog.user_id|name}}</a></td>
+            <td>{{ visitorlog.IP }}</td>
             </tr>
         {% endfor %}
         </table>
