--- a/templates/show/group.html
+++ b/templates/show/group.html
@@ -3,14 +3,15 @@
 {% block content %}
 {% load tag %}
 {% if group_show_open %}
-<a href="../add/{{classroom_id}}">新增組別</a>
+<a href="../add/{{classroom_id}}"><img src="/static/images/icon_group_new.png">新增組別</a>
 {% endif %}
 {% if teacher %}
 {% if group_show_open %}
-<a href="../open/{{classroom_id}}/0">關閉選組</a>
+<a href="../open/{{classroom_id}}/0"><img src="/static/images/icon_close.png">關閉選組</a>
 {% else %}
-<a href="../open/{{classroom_id}}/1">開放選組</a>
+<a href="../open/{{classroom_id}}/1"><img src="/static/images/icon_open.png">開放選組</a>
 {% endif %}
+　<a href="/show/excel/{{classroom_id}}"><img src="/static/images/icon_excel.png">匯出到Excel</a><BR>
 {% endif %}
 <br>
 <table>
