export image to excel

--- a/templates/student/classroom.html
+++ b/templates/student/classroom.html
@@ -2,7 +2,8 @@
 {% block title %} Teachers {% endblock %}
 {% load tag %}
 {% block content %}
-        <a href="add">加入班級</a></BR>
+        <a href="add"><img src="/static/images/icon_join.png">加入班級</a><BR><BR>
+        
         <table>
         {% for enroll in enrolls %}
         <tr>
