--- a/templates/teacher/classroom_list.html
+++ b/templates/teacher/classroom_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Teachers {% endblock %}
 {% block content %}
-        <a href="/teacher/classroom/add">新增班級</a></BR>
+        <a href="/teacher/classroom/add"><img src="/static/images/icon_class_new.png">新增班級</a><BR><BR>
         <table>
             <tr>
                 <td>名稱</td>
