--- a/templates/teacher/grade_unit1.html
+++ b/templates/teacher/grade_unit1.html
@@ -2,7 +2,7 @@
 {% load tz %}
 {% block title %} Teachers {% endblock %}
 {% block content %}
-        班級名稱：{{ classroom_name }}<BR>
+        班級名稱：{{ classroom.name }}<BR>
         <table>
         <tr>
             <td>姓名</td>
