--- a/templates/student/group.html
+++ b/templates/student/group.html
@@ -2,13 +2,14 @@
 {% block title %} Students {% endblock %}
 {% block content %}
 {% if group_open %}
-<a href="../add/{{classroom_id}}"><img src="/static/images/icon_group_new.png">新增組別</a>
+<a href="../add/{{classroom.id}}"><img src="/static/images/icon_group_new.png">新增組別</a>
 {% endif %}
 {% if teacher %}
+<a href="../size/{{classroom.id}}"><img src="/static/images/icon_size.png">設定人數</a>
 {% if group_open %}
-<a href="../open/{{classroom_id}}/0"><img src="/static/images/icon_close.png">關閉選組</a>
+<a href="../open/{{classroom.id}}/0"><img src="/static/images/icon_close.png">關閉選組</a>
 {% else %}
-<a href="../open/{{classroom_id}}/1"><img src="/static/images/icon_open.png">開放選組</a>
+<a href="../open/{{classroom.id}}/1"><img src="/static/images/icon_open.png">開放選組</a>
 {% endif %}
 {% endif %}
 
@@ -19,13 +20,14 @@
 <td>名稱</td>  
 <td>組員</td>  
 <td>狀態</td>
+<td>空位</td>
 </tr>
         {% for group in student_groups %}
                 <tr>
                 <td>
 			{% for user_group in user.groups.all %}
 				{% if user_group.name == 'teacher' and group.1|length == 0 %}
-				<a href="/student/group/delete/{{group.0.id}}/{{classroom_id}}" onclick="return confirm('確定要刪除嗎?')">刪除</a>
+				<a href="/student/group/delete/{{group.0.id}}/{{classroom.id}}" onclick="return confirm('確定要刪除嗎?')">刪除</a>
 				{% endif %}		
 			{% endfor %}							
 				{{group.0.name}}</td>
@@ -40,10 +42,16 @@
                 {% if student_group == group.0.id %}
                 已加入
                 {% else %}
-                <a href="/student/group/enroll/{{classroom_id}}/{{group.0.id}}">加入此組</a>
+                {% if group.2 > 0 %}
+                <a href="/student/group/enroll/{{classroom.id}}/{{group.0.id}}">加入此組</a>
+                {% else %}
+                額滿
+                {% endif%}
                 {% endif %}             
                 {% endif %}
                 </td>
+                <td>{{group.2}}</td>
+                </tr>
         {% endfor %}
 </table>
 
