line classmate history

--- a/templates/account/line_form.html
+++ b/templates/account/line_form.html
@@ -10,4 +10,13 @@
             {% csrf_token %}
             <input type="submit" value="Submit">
         </form>
+        <BR>
+        <h1>歷史私訊</h1>
+        <table>
+        {% for message, read in messages %}
+        <tr><td>{{message.time}}<a href="/account/line/detail/{{message.id}}">{{message.title}}{% if not read %}(未讀){% endif %}</a></td></tr>
+        {% empty %}
+        <tr><td>無</td></tr>
+        {% endfor %}
+        </table>
 {% endblock %}
