--- a/templates/student/classmate.html
+++ b/templates/student/classmate.html
@@ -11,14 +11,14 @@
             <td>姓名</td>
             <td>組別</td>
             <td>最新登入</td>
-            <td>私訊</td>            
+            <td>登入次數</td>            
 			{% for group in user.groups.all %}
 			{% if group.name == 'teacher' %}            
             <td>事件</td>
             {% endif %}
             {% endfor %}
         </tr>
-        {% for enroll, group_name in enroll_group %}
+        {% for enroll, group_name, login_times in enroll_group %}
             <tr>
 			<td>
 			{% for group in user.groups.all %}
@@ -34,7 +34,7 @@
             <td>{{enroll.student.first_name}}</td>
             <td>{{group_name}}</td>
             <td>{{enroll.student.last_login}}</td>
-            <td><a href="/account/line/add/{{enroll.classroom_id}}/{{enroll.student_id}}">發出私訊</a></td>
+            <td><a href="/student/loginlog/{{enroll.student_id}}">{{login_times}}</a></td>
 			{% for group in user.groups.all %}
 			{% if group.name == 'teacher' %}              
             <td><a href="/account/event/{{enroll.student.id}}">事件</a></td>
