--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -40,6 +40,7 @@ article {
 <script>
 
 $(function () {
+    $(document).scrollTop(0);
     $('.block article').hide();
     var defaultTab = $('ul.tabs li:first');
     var defaultArticle = $('.block article:first');
