--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@ Licence URI: http://www.os-templates.com/template-terms
 		<li><a href="/show/gallery"><img  width=16 src="/static/images/icon_gallery.png">藝廊</a></li>		
 		{% if not user.is_authenticated %}
 		<li><a href="http://www.books.com.tw/products/0010703424" target="_blank"><img src="/static/images/icon_book.png" width=16>參考書</a></li>
+		<li><a href="/account/article"><img src="/static/images/icon_article.png" width=16>網路文章</a></li>
         <div class="dropdown">			
 		<li><img src="/static/images/icon_manual.png" width=16>使用手冊</li>
 		<div class="dropdown-content">
