--- a/templates/account/article.html
+++ b/templates/account/article.html
@@ -19,5 +19,11 @@
 <tr><td>
 <img src="/static/images/icon_article5.png"> <A href="http://www.ithome.com.tw/voice/89695" target=_blank>王建興：程式設計不等同於軟體開發</A>    
 </td></tr>  
+<tr><td>
+<img src="/static/images/icon_article1.png"> <A href="http://www.businessweekly.com.tw/KBlogArticle.aspx?id=3704" target=_blank>真正「神級」程式工程師的 7 項特質 — 都與技術無關！</A>    
+</td></tr>
+<tr><td>
+<img src="/static/images/icon_article2.png"> <A href="http://blog.vgod.tw/2008/07/05/%E8%BF%BD%E6%B1%82%E7%A5%9E%E4%B9%8E%E5%85%B6%E6%8A%80%E7%9A%84%E7%A8%8B%E5%BC%8F%E8%A8%AD%E8%A8%88%E4%B9%8B%E9%81%93%E4%B8%80%EF%BC%89/?variant=zh-tw" target=_blank>張琮翔：追求神乎其技的程式設計之道</A>    
+</td></tr>
 </table>
 {% endblock %}
