--- a/templates/account/event_list.html
+++ b/templates/account/event_list.html
@@ -22,7 +22,7 @@
             <tr>
                 <td><a href="/account/profile/{{log.user_id}}">{{log.user_id|name}}</a></td>
                 <td>{{log.event}}</a></td>
-				<td>{{log.publish}}</td>
+				<td>{{log.publish| date:"DATE_FORMAT"}}</td>
             </tr>
         {% endfor %}
         </table>
