--- a/templates/account/visitorlog_list.html
+++ b/templates/account/visitorlog_list.html
@@ -12,7 +12,7 @@
         {% for visitorlog in visitorlogs %}
             <tr>
             <td>{{forloop.counter}}</td>
-            <td>{{visitorlog.time}}</a></td>
+            <td>{{visitorlog.time| date:"DATE_FORMAT"}}</a></td>
             <td>{% if visitorlog.user_id|is_classmate:request %}<a href="/account/profile/{{visitorlog.user_id}}">{% endif %}{{visitorlog.user_id|name}}</a></td>
             <td>{{ visitorlog.IP }}</td>
             </tr>
