--- a/templates/teacher/announce_list.html
+++ b/templates/teacher/announce_list.html
@@ -2,14 +2,14 @@
 {% block title %} Teachers {% endblock %}
 {% block content %}
         <h1>班級名稱：{{classroom.name}}</h1>
-        <a href="/teacher/announce/add/{{classroom.id}}">新增公告</a></BR>
+        <img src="/static/images/icon_announce.png"> <a href="/teacher/announce/add/{{classroom.id}}">新增公告</a><BR><BR>
         <table>
             <tr>
                 <td>時間</td>
                 <td>主旨</td>
         {% for message in messages %}
             <tr>
-            <td>{{message.time}}</td>
+            <td>{{message.time| date:"DATE_FORMAT"}}</td>
             <td><a href="/teacher/announce/detail/{{message.id}}">{{message.title}}</a></td>
             </tr>
         {% endfor %}
